better compiling, module info, warning fixes